generate the adb successfully,

--- a/adb/adb.vcxproj
+++ b/adb/adb.vcxproj
@@ -155,36 +155,61 @@
     <ClCompile Include="adb_utils.cpp" />
     <ClCompile Include="adb_wifi.cpp" />
     <ClCompile Include="aes_128_gcm.cpp" />
+    <ClCompile Include="alarm.cc" />
     <ClCompile Include="android_pubkey.cpp" />
     <ClCompile Include="auth.cpp" />
+    <ClCompile Include="big_endian.cc" />
+    <ClCompile Include="commandline.cpp" />
+    <ClCompile Include="conversion_layer.cc" />
     <ClCompile Include="diagnose_usb.cpp" />
+    <ClCompile Include="dns_data_graph.cc" />
+    <ClCompile Include="dns_sd_instance.cc" />
+    <ClCompile Include="dns_sd_instance_endpoint.cc" />
+    <ClCompile Include="dns_sd_txt_record.cc" />
     <ClCompile Include="env.cpp" />
     <ClCompile Include="error.cc" />
     <ClCompile Include="errors_windows.cpp" />
     <ClCompile Include="fdevent.cpp" />
     <ClCompile Include="fdevent_poll.cpp" />
     <ClCompile Include="file.cpp" />
+    <ClCompile Include="instance_key.cc" />
     <ClCompile Include="interface_info.cc" />
     <ClCompile Include="ip_address.cc" />
     <ClCompile Include="key.cpp" />
     <ClCompile Include="key_type.pb.cc" />
     <ClCompile Include="logging.cpp" />
     <ClCompile Include="mdnsresponder_client.cpp" />
+    <ClCompile Include="mdns_probe.cc" />
+    <ClCompile Include="mdns_probe_manager.cc" />
+    <ClCompile Include="mdns_publisher.cc" />
+    <ClCompile Include="mdns_querier.cc" />
+    <ClCompile Include="mdns_reader.cc" />
+    <ClCompile Include="mdns_receiver.cc" />
+    <ClCompile Include="mdns_records.cc" />
+    <ClCompile Include="mdns_responder.cc" />
+    <ClCompile Include="mdns_sender.cc" />
+    <ClCompile Include="mdns_service.cc" />
     <ClCompile Include="mdns_service_impl.cc" />
     <ClCompile Include="mdns_service_info.cpp" />
     <ClCompile Include="mdns_service_watcher.cpp" />
+    <ClCompile Include="mdns_trackers.cc" />
     <ClCompile Include="mdns_utils.cpp" />
+    <ClCompile Include="mdns_writer.cc" />
     <ClCompile Include="network_interface.cc" />
+    <ClCompile Include="network_interface_config.cc" />
     <ClCompile Include="network_interface_win.cc" />
     <ClCompile Include="pairing.pb.cc" />
     <ClCompile Include="pairing_auth.cpp" />
     <ClCompile Include="pairing_client.cpp" />
     <ClCompile Include="pairing_connection.cpp" />
     <ClCompile Include="parsenetaddress.cpp" />
+    <ClCompile Include="publisher_impl.cc" />
+    <ClCompile Include="querier_impl.cc" />
     <ClCompile Include="rsa_2048_key.cpp" />
     <ClCompile Include="services.cpp" />
     <ClCompile Include="service_dispatcher.cc" />
     <ClCompile Include="service_instance.cc" />
+    <ClCompile Include="service_key.cc" />
     <ClCompile Include="sockets.cpp" />
     <ClCompile Include="socket_spec.cpp" />
     <ClCompile Include="stat.cpp" />
@@ -193,12 +218,15 @@
     <ClCompile Include="strings.cpp" />
     <ClCompile Include="sysdeps_win32.cpp" />
     <ClCompile Include="task_runner.cpp" />
+    <ClCompile Include="time.cc" />
     <ClCompile Include="tls_connection.cpp" />
     <ClCompile Include="transport.cpp" />
     <ClCompile Include="transport_local.cpp" />
     <ClCompile Include="transport_mdns.cpp" />
     <ClCompile Include="transport_usb.cpp" />
     <ClCompile Include="types.cpp" />
+    <ClCompile Include="udp_packet.cc" />
+    <ClCompile Include="udp_socket.cpp" />
     <ClCompile Include="usb_windows.cpp" />
     <ClCompile Include="utf8.cpp" />
     <ClCompile Include="x509_generator.cpp" />
@@ -220,7 +248,9 @@
     <ClInclude Include="aes_128_gcm.h" />
     <ClInclude Include="alarm.h" />
     <ClInclude Include="android_pubkey.h" />
+    <ClInclude Include="big_endian.h" />
     <ClInclude Include="chrono.h" />
+    <ClInclude Include="chrono_helpers.h" />
     <ClInclude Include="chrono_utils.h" />
     <ClInclude Include="cmsg.h" />
     <ClInclude Include="collections.h" />
@@ -257,19 +287,24 @@
     <ClInclude Include="mapped_file.h" />
     <ClInclude Include="mdns_constants.h" />
     <ClInclude Include="mdns_domain_confirmed_provider.h" />
+    <ClInclude Include="mdns_probe.h" />
     <ClInclude Include="mdns_probe_manager.h" />
     <ClInclude Include="mdns_publisher.h" />
     <ClInclude Include="mdns_querier.h" />
     <ClInclude Include="mdns_random.h" />
+    <ClInclude Include="mdns_reader.h" />
     <ClInclude Include="mdns_receiver.h" />
     <ClInclude Include="mdns_records.h" />
     <ClInclude Include="mdns_record_changed_callback.h" />
     <ClInclude Include="mdns_responder.h" />
+    <ClInclude Include="mdns_sender.h" />
     <ClInclude Include="mdns_service.h" />
     <ClInclude Include="mdns_service_impl.h" />
     <ClInclude Include="mdns_service_info.h" />
     <ClInclude Include="mdns_service_watcher.h" />
+    <ClInclude Include="mdns_trackers.h" />
     <ClInclude Include="mdns_utils.h" />
+    <ClInclude Include="mdns_writer.h" />
     <ClInclude Include="network.h" />
     <ClInclude Include="network_interface.h" />
     <ClInclude Include="network_interface_config.h" />
