--- a/adb/adb.vcxproj.filters
+++ b/adb/adb.vcxproj.filters
@@ -97,6 +97,9 @@
     <Filter Include="pairing">
       <UniqueIdentifier>{d8dd3e57-71b3-4fec-9afc-189595d66250}</UniqueIdentifier>
     </Filter>
+    <Filter Include="client\platform">
+      <UniqueIdentifier>{20e6d4c4-97b7-474f-8b33-41f0bcdd34a2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="adb.cpp">
@@ -275,6 +278,90 @@
     </ClCompile>
     <ClCompile Include="mdns_service_impl.cc">
       <Filter>discovery\mdns</Filter>
+    </ClCompile>
+    <ClCompile Include="udp_packet.cc">
+      <Filter>platform\base</Filter>
+    </ClCompile>
+    <ClCompile Include="querier_impl.cc">
+      <Filter>discovery\dnssd\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="mdns_publisher.cc">
+      <Filter>discovery\mdns</Filter>
+    </ClCompile>
+    <ClCompile Include="mdns_records.cc">
+      <Filter>discovery\mdns</Filter>
+    </ClCompile>
+    <ClCompile Include="mdns_receiver.cc">
+      <Filter>discovery\mdns</Filter>
+    </ClCompile>
+    <ClCompile Include="mdns_writer.cc">
+      <Filter>discovery\mdns</Filter>
+    </ClCompile>
+    <ClCompile Include="dns_data_graph.cc">
+      <Filter>discovery\dnssd\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="conversion_layer.cc">
+      <Filter>discovery\dnssd\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="mdns_service.cc">
+      <Filter>discovery\mdns\public</Filter>
+    </ClCompile>
+    <ClCompile Include="network_interface_config.cc">
+      <Filter>discovery\dnssd\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="service_key.cc">
+      <Filter>discovery\dnssd\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="mdns_sender.cc">
+      <Filter>discovery\mdns</Filter>
+    </ClCompile>
+    <ClCompile Include="publisher_impl.cc">
+      <Filter>discovery\dnssd\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="dns_sd_instance.cc">
+      <Filter>discovery\dnssd\public</Filter>
+    </ClCompile>
+    <ClCompile Include="big_endian.cc">
+      <Filter>util</Filter>
+    </ClCompile>
+    <ClCompile Include="dns_sd_txt_record.cc">
+      <Filter>discovery\dnssd\public</Filter>
+    </ClCompile>
+    <ClCompile Include="mdns_responder.cc">
+      <Filter>discovery\mdns</Filter>
+    </ClCompile>
+    <ClCompile Include="mdns_reader.cc">
+      <Filter>discovery\mdns</Filter>
+    </ClCompile>
+    <ClCompile Include="mdns_probe_manager.cc">
+      <Filter>discovery\mdns</Filter>
+    </ClCompile>
+    <ClCompile Include="dns_sd_instance_endpoint.cc">
+      <Filter>discovery\dnssd\public</Filter>
+    </ClCompile>
+    <ClCompile Include="mdns_querier.cc">
+      <Filter>discovery\mdns</Filter>
+    </ClCompile>
+    <ClCompile Include="mdns_trackers.cc">
+      <Filter>discovery\mdns</Filter>
+    </ClCompile>
+    <ClCompile Include="mdns_probe.cc">
+      <Filter>discovery\mdns</Filter>
+    </ClCompile>
+    <ClCompile Include="alarm.cc">
+      <Filter>util</Filter>
+    </ClCompile>
+    <ClCompile Include="udp_socket.cpp">
+      <Filter>client\platform</Filter>
+    </ClCompile>
+    <ClCompile Include="instance_key.cc">
+      <Filter>discovery\dnssd\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="time.cc">
+      <Filter>platform\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="commandline.cpp">
+      <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -607,6 +694,27 @@
     </ClInclude>
     <ClInclude Include="udp_packet.h">
       <Filter>platform\base</Filter>
+    </ClInclude>
+    <ClInclude Include="mdns_sender.h">
+      <Filter>discovery\mdns</Filter>
+    </ClInclude>
+    <ClInclude Include="mdns_writer.h">
+      <Filter>discovery\mdns</Filter>
+    </ClInclude>
+    <ClInclude Include="big_endian.h">
+      <Filter>util</Filter>
+    </ClInclude>
+    <ClInclude Include="mdns_probe.h">
+      <Filter>discovery\mdns</Filter>
+    </ClInclude>
+    <ClInclude Include="mdns_trackers.h">
+      <Filter>discovery\mdns</Filter>
+    </ClInclude>
+    <ClInclude Include="mdns_reader.h">
+      <Filter>discovery\mdns</Filter>
+    </ClInclude>
+    <ClInclude Include="chrono_helpers.h">
+      <Filter>util</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
