init some proto

--- a/adb/adb.vcxproj
+++ b/adb/adb.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="adb.cpp" />
     <ClCompile Include="adb_ca_list.cpp" />
     <ClCompile Include="adb_client.cpp" />
+    <ClCompile Include="adb_install.cpp" />
     <ClCompile Include="adb_io.cpp" />
     <ClCompile Include="adb_known_hosts.pb.cc" />
     <ClCompile Include="adb_listeners.cpp" />
@@ -157,9 +158,12 @@
     <ClCompile Include="aes_128_gcm.cpp" />
     <ClCompile Include="alarm.cc" />
     <ClCompile Include="android_pubkey.cpp" />
+    <ClCompile Include="ApkEntry.pb.cc" />
+    <ClCompile Include="app_processes.pb.cc" />
     <ClCompile Include="auth.cpp" />
     <ClCompile Include="big_endian.cc" />
     <ClCompile Include="commandline.cpp" />
+    <ClCompile Include="console.cpp" />
     <ClCompile Include="conversion_layer.cc" />
     <ClCompile Include="diagnose_usb.cpp" />
     <ClCompile Include="dns_data_graph.cc" />
@@ -167,16 +171,19 @@
     <ClCompile Include="dns_sd_instance_endpoint.cc" />
     <ClCompile Include="dns_sd_txt_record.cc" />
     <ClCompile Include="env.cpp" />
+    <ClCompile Include="errno.cpp" />
     <ClCompile Include="error.cc" />
     <ClCompile Include="errors_windows.cpp" />
     <ClCompile Include="fdevent.cpp" />
     <ClCompile Include="fdevent_poll.cpp" />
     <ClCompile Include="file.cpp" />
+    <ClCompile Include="file_sync_client.cpp" />
     <ClCompile Include="instance_key.cc" />
     <ClCompile Include="interface_info.cc" />
     <ClCompile Include="ip_address.cc" />
     <ClCompile Include="key.cpp" />
     <ClCompile Include="key_type.pb.cc" />
+    <ClCompile Include="line_printer.cpp" />
     <ClCompile Include="logging.cpp" />
     <ClCompile Include="mdnsresponder_client.cpp" />
     <ClCompile Include="mdns_probe.cc" />
@@ -237,6 +244,7 @@
     <ClInclude Include="adb_auth.h" />
     <ClInclude Include="adb_ca_list.h" />
     <ClInclude Include="adb_client.h" />
+    <ClInclude Include="adb_install.h" />
     <ClInclude Include="adb_io.h" />
     <ClInclude Include="adb_known_hosts.pb.h" />
     <ClInclude Include="adb_listeners.h" />
@@ -248,13 +256,18 @@
     <ClInclude Include="aes_128_gcm.h" />
     <ClInclude Include="alarm.h" />
     <ClInclude Include="android_pubkey.h" />
+    <ClInclude Include="ApkEntry.pb.h" />
+    <ClInclude Include="app_processes.pb.h" />
+    <ClInclude Include="asprintf.h" />
     <ClInclude Include="big_endian.h" />
+    <ClInclude Include="bugreport.h" />
     <ClInclude Include="chrono.h" />
     <ClInclude Include="chrono_helpers.h" />
     <ClInclude Include="chrono_utils.h" />
     <ClInclude Include="cmsg.h" />
     <ClInclude Include="collections.h" />
     <ClInclude Include="commandline.h" />
+    <ClInclude Include="compression_utils.h" />
     <ClInclude Include="config.h" />
     <ClInclude Include="constants.h" />
     <ClInclude Include="conversion_layer.h" />
@@ -271,17 +284,23 @@
     <ClInclude Include="dns_sd_txt_record.h" />
     <ClInclude Include="endian.h" />
     <ClInclude Include="env.h" />
+    <ClInclude Include="errno.h" />
     <ClInclude Include="error.h" />
     <ClInclude Include="errors.h" />
+    <ClInclude Include="fastdeploy.h" />
     <ClInclude Include="fdevent.h" />
     <ClInclude Include="fdevent_poll.h" />
     <ClInclude Include="file.h" />
+    <ClInclude Include="file_sync_client.h" />
+    <ClInclude Include="file_sync_protocol.h" />
     <ClInclude Include="hashing.h" />
+    <ClInclude Include="incremental_server.h" />
     <ClInclude Include="instance_key.h" />
     <ClInclude Include="interface_info.h" />
     <ClInclude Include="ip_address.h" />
     <ClInclude Include="key.h" />
     <ClInclude Include="key_type.pb.h" />
+    <ClInclude Include="line_printer.h" />
     <ClInclude Include="logging.h" />
     <ClInclude Include="macros.h" />
     <ClInclude Include="mapped_file.h" />
@@ -326,6 +345,7 @@
     <ClInclude Include="service_dispatcher.h" />
     <ClInclude Include="service_instance.h" />
     <ClInclude Include="service_key.h" />
+    <ClInclude Include="shell_protocol.h" />
     <ClInclude Include="socket.h" />
     <ClInclude Include="sockets.h" />
     <ClInclude Include="socket_spec.h" />
